# zeek-websocket-rs

./: .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  docs.yml
benches/: criterion.rs
bindings/c/: cbindgen.toml
bindings/c/examples/: .clang-tidy  CMakeLists.txt  example.c  example.cc
bindings/c/tests/: test.cc
bindings/c/zeek-websocket-c/: Cargo.toml
bindings/c/zeek-websocket-c/src/: lib.rs
bindings/node/zeek-websocket-node/: Cargo.toml  package.json
bindings/node/zeek-websocket-node/__test__/: index.spec.ts
bindings/node/zeek-websocket-node/src/: lib.rs
bindings/python/examples/: async_client.py
bindings/python/tests/: test_binding.py  test_make_value.py  test_serialize.py
bindings/python/zeek_websocket/: __init__.py  zeek_websocket.pyi
crates/zeek-websocket-c/: Cargo.toml
crates/zeek-websocket-c/src/: lib.rs
crates/zeek-websocket-derive/: Cargo.toml
crates/zeek-websocket-derive/src/: lib.rs
crates/zeek-websocket-derive/tests/: basic.rs  enum-fail.rs  enum-fail.stderr  main.rs  tuple-struct-fail.rs  tuple-struct-fail.stderr  unhandled-field-type-fail.rs  unhandled-field-type-fail.stderr  unit-struct-fail.rs  unit-struct-fail.stderr  zeek_event-basic.rs  zeek_event-non-value-fail.rs  zeek_event-non-value-fail.stderr
crates/zeek-websocket-types/: Cargo.toml
crates/zeek-websocket-types/src/: lib.rs
examples/: client.rs  local.zeek  tokio-tungstenite.rs  tungstenite.rs
src/: client.rs  conn.rs  lib.rs  protocol.rs  python.rs  test.rs  types.rs
src/python/: asyncio.rs
