[package]
name = "zeek-websocket"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bbannier/zeek-websocket-rs"
rust-version = "1.85"

[features]
default = ["tungstenite", "derive"]

## Enables conversions to and from [`tungstenite`](https://docs.rs/tungstenite/) messages.
tungstenite = ["dep:tungstenite", "dep:serde_json"]

## Enables derive macros for converting to and from [`zeek_websocket_types::Value`]
derive = ["dep:zeek-websocket-derive"]

[dependencies]
document-features = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tungstenite = { workspace = true, optional = true }
zeek-websocket-derive = { workspace = true, optional = true }
zeek-websocket-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
futures-util = { workspace = true }
ipnetwork = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true, features = ["native-tls"] }

[workspace]
members = ["crates/zeek-websocket-derive", "crates/zeek-websocket-types"]

[workspace.dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false }
criterion = { version = "2.10.1", default-features = false, features = ["async_tokio", "html_reports", "plotters"], package = "codspeed-criterion-compat" }
document-features = "0.2.11"
futures-util = "0.3.31"
if_chain = "1.0.2"
ipnetwork = "0.21.1"
iso8601 = "0.6.3"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = "1.0.219"
serde_json = "1.0.140"
syn = { version = "2.0.103", features = ["derive", "parsing", "proc-macro", "printing"], default-features = false }
thiserror = "2.0.12"
tokio = "1.45.0"
tokio-tungstenite = "0.26.2"
trybuild = "1.0.105"
tungstenite = "0.26.2"
zeek-websocket-derive = { path = "crates/zeek-websocket-derive" }
zeek-websocket-types = { path = "crates/zeek-websocket-types" }

[[example]]
name = "tungstenite"
required-features = ["tungstenite"]

[[bench]]
name = "criterion"
harness = false

[[example]]
name = "tokio-tungstenite"
required-features = ["tungstenite"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
ignored_unit_patterns = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
