[package]
name = "zeek-websocket"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bbannier/zeek-websocket-rs"
rust-version = "1.88"

[features]
default = ["tungstenite", "derive", "tokio-client"]

## Enables tokio client.
tokio-client = ["dep:tokio-tungstenite", "dep:futures-util", "dep:typed-builder", "dep:tokio", "tungstenite"]

## Enables derive macros for converting to and from [`zeek_websocket_types::Value`]
derive = ["dep:zeek-websocket-derive"]

## Enables conversions to and from [`tungstenite`](https://docs.rs/tungstenite/) messages.
tungstenite = ["dep:tungstenite", "dep:serde_json"]

## Enables Python bindings.
python = ["dep:pyo3", "dep:chrono", "dep:ipnetwork", "dep:serde_json", "dep:ordered-float", "tungstenite"]

[dependencies]
document-features = { workspace = true }
futures-util = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
ipnetwork = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"], optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tungstenite = { workspace = true, optional = true }
typed-builder = { workspace = true, optional = true }
zeek-websocket-derive = { workspace = true, optional = true }
zeek-websocket-types = { workspace = true }
ordered-float = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
futures-util = { workspace = true }
ipnetwork = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true, features = ["native-tls"] }

[workspace]
members = ["crates/zeek-websocket-derive", "crates/zeek-websocket-types"]

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
chrono = { version = "0.4.41", default-features = false }
criterion = { version = "2.10.1", default-features = false, features = ["async_tokio", "html_reports", "plotters"], package = "codspeed-criterion-compat" }
document-features = { version = "0.2.11", features = ["default"], default-features = false }
futures-util = { version = "0.3.31", default-features = false }
ipnetwork = { version = "0.21.1", default-features = false }
ordered-float = {version = "5.1.0", default-features = false }
proc-macro-error2 = { version = "2.0.1", default-features = false }
proc-macro2 = { version = "1.0.95", default-features = false }
pyo3 = { version = "0.27.0", features = ["chrono", "ordered-float"] }
quote = { version = "1.0.40", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", features = ["std"], default-features = false }
syn = { version = "2.0.103", features = ["derive", "proc-macro"], default-features = false }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.1", default-features = false }
tokio-tungstenite = { version = "0.28.0", features = ["connect"], default-features = false }
trybuild = { version = "1.0.105", default-features = false }
tungstenite = { version = "0.28.0", features = ["handshake"], default-features = false }
typed-builder = { version = "0.23.0", default-features = false }
zeek-websocket-derive = { path = "crates/zeek-websocket-derive" }
zeek-websocket-types = { path = "crates/zeek-websocket-types" }

[[example]]
name = "tungstenite"
required-features = ["tungstenite"]

[[bench]]
name = "criterion"
harness = false

[[example]]
name = "tokio-tungstenite"
required-features = ["tungstenite"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
ignored_unit_patterns = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
