[package]
name = "zeek-websocket-c"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
time = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
zeek-websocket = { path = "../../../", default-features = false, features = ["tokio-client"] }
