
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2024"
name = "zeek-websocket-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
time = { workspace = true }
napi = { version = "3.0.0", features = ["napi6"] }
napi-derive = "3.0.0"
serde_json.workspace = true
thiserror.workspace = true
zeek-websocket = { path = "../../../" }

[build-dependencies]
napi-build = "2"
