
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2024"
name = "zeek-websocket-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
time = { workspace = true }
napi = { workspace = true, features = ["napi6"] }
napi-derive = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
zeek-websocket = { path = "../../../" }

[build-dependencies]
napi-build = "2"
